--- a/rpm/kf5-baloo-widgets.yaml
+++ b/rpm/kf5-baloo-widgets.yaml
@@ -40,6 +40,7 @@ PkgConfigBR:
     - Qt5Widgets
     - Qt5Concurrent
     - Qt5Test
+    - Qt5PrintSupport
     - Qt5Sql
 Requires:
     - kf5-filesystem
