Fix include dir

--- a/rpm/kf5-baloo-widgets.yaml
+++ b/rpm/kf5-baloo-widgets.yaml
@@ -63,4 +63,4 @@ SubPackages:
       Files:
           - "%{_kf5_libdir}/*.so"
           - "%{_kf5_libdir}/cmake/BalooWidgets"
-          - "%{_kf5_includedir}/baloo"
+          - "%{_includedir}/baloo"
