Fix include path
Was changed upstream.

--- a/rpm/kf5-baloo-widgets.yaml
+++ b/rpm/kf5-baloo-widgets.yaml
@@ -63,4 +63,4 @@ SubPackages:
       Files:
           - "%{_kf5_libdir}/*.so"
           - "%{_kf5_libdir}/cmake/KF5BalooWidgets"
-          - "%{_includedir}/baloo"
+          - "%{_kf5_includedir}/BalooWidgets"
